Expand question content and study platform